fixed align

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -54,6 +54,10 @@ li .card.small {
 .parallax-container {
 	width:100vw;
 }
+
+.input-field label {
+	left: 0;
+}
 /*.col .fixed-action-btn ul {
 	left:9px;
 } */
